reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__envelope.rs_line_885_col_9.log

*** crates/tracewake-core/src/events/envelope.rs:885:9: replace EventEnvelope::deserialize_canonical -> Result<Self, EventEnvelopeParseError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/envelope.rs
+++ replace EventEnvelope::deserialize_canonical -> Result<Self, EventEnvelopeParseError> with Ok(Default::default())
@@ -877,82 +877,17 @@
             .into_iter()
             .map(|(key, value)| format!("{key}={value}"))
             .collect::<Vec<_>>()
             .join("\n")
             .into_bytes()
     }
 
     pub fn deserialize_canonical(bytes: &[u8]) -> Result<Self, EventEnvelopeParseError> {
-        let text = std::str::from_utf8(bytes).map_err(|_| EventEnvelopeParseError::InvalidUtf8)?;
-        let mut map = std::collections::BTreeMap::new();
-        for line in text.lines() {
-            let (key, value) = line
-                .split_once('=')
-                .ok_or(EventEnvelopeParseError::MalformedField)?;
-            if map.insert(key, value).is_some() {
-                return Err(EventEnvelopeParseError::DuplicateField(key.to_string()));
-            }
-        }
-
-        let event_type = EventKind::from_stable_id(&decode(required(&map, "event_type")?)?)
-            .ok_or(EventEnvelopeParseError::UnknownEventKind)?;
-        let event_schema_version =
-            SchemaVersion::new(decode(required(&map, "event_schema_version")?)?)?;
-        if event_schema_registry_entry(&event_schema_version).is_none() {
-            return Err(EventEnvelopeParseError::UnsupportedSchemaVersion(
-                event_schema_version.as_str().to_string(),
-            ));
-        }
-        let ordering_key = deserialize_ordering_key(&decode(required(&map, "ordering_key")?)?)?;
-
-        Ok(Self {
-            event_id: EventId::new(decode(required(&map, "event_id")?)?)?,
-            event_type,
-            event_schema_version,
-            stream: stream_from_id(&decode(required(&map, "stream")?)?)
-                .ok_or(EventEnvelopeParseError::UnknownStream)?,
-            stream_position: required(&map, "stream_position")?.parse()?,
-            global_order: required(&map, "global_order")?.parse()?,
-            sim_tick: SimTick::new(required(&map, "sim_tick")?.parse()?),
-            ordering_key,
-            actor_id: decode_opt(required(&map, "actor_id")?)?
-                .map(ActorId::new)
-                .transpose()?,
-            process_id: decode_opt(required(&map, "process_id")?)?
-                .map(ProcessId::new)
-                .transpose()?,
-            participants: decode_vec(required(&map, "participants")?)?,
-            place_id: decode_opt(required(&map, "place_id")?)?
-                .map(PlaceId::new)
-                .transpose()?,
-            causes: decode_vec(required(&map, "causes")?)?
-                .into_iter()
-                .map(|value| deserialize_cause(&value))
-                .collect::<Result<_, _>>()?,
-            proposal_id: decode_opt(required(&map, "proposal_id")?)?
-                .map(ProposalId::new)
-                .transpose()?,
-            validation_report_id: decode_opt(required(&map, "validation_report_id")?)?
-                .map(ValidationReportId::new)
-                .transpose()?,
-            random_draws: decode_vec(required(&map, "random_draws")?)?
-                .into_iter()
-                .map(|value| deserialize_random_draw(&value))
-                .collect::<Result<_, _>>()?,
-            payload: decode_vec(required(&map, "payload")?)?
-                .into_iter()
-                .map(|value| deserialize_payload(&value))
-                .collect::<Result<_, _>>()?,
-            effects_summary: decode(required(&map, "effects_summary")?)?,
-            content_manifest_id: ContentManifestId::new(decode(required(
-                &map,
-                "content_manifest_id",
-            )?)?)?,
-        })
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 #[derive(Clone, Debug, PartialEq, Eq)]
 pub enum EventEnvelopeBuildError {
     MissingRequiredCause,
 }
 


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/envelope.rs` has changed (1781910887.595923729s, 2s after last build at 1781910885.479923713s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/events/envelope.rs:885:12
    |
885 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/events/envelope.rs:885:12
    |
885 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
